[gd_scene load_steps=16 format=3 uid="uid://d378pqq1nrtpv"]

[ext_resource type="Texture2D" uid="uid://cc84wrvylu1jf" path="res://assets/sprites/slime_green.png" id="1_myadw"]
[ext_resource type="Script" path="res://assets/sprites/slime.gd" id="1_ndyxx"]
[ext_resource type="Script" path="res://assets/sprites/shouji.gd" id="4_t7jut"]
[ext_resource type="Script" path="res://assets/sprites/daren2.gd" id="4_vtpkp"]
[ext_resource type="AudioStream" uid="uid://4f0jajtp7obi" path="res://assets/sounds/jump.wav" id="5_jpi18"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lngpu"]
atlas = ExtResource("1_myadw")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_uiw4b"]
atlas = ExtResource("1_myadw")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_80sd2"]
atlas = ExtResource("1_myadw")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gamx1"]
atlas = ExtResource("1_myadw")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_0n8c4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lngpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uiw4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80sd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gamx1")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vyuem"]
size = Vector2(11.5, 12.5)

[sub_resource type="Animation" id="Animation_7fwne"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_qe803"]
resource_name = "shouji1"
length = 0.3
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.092, 0.297, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.152941, 0.0470588, 1), Color(1, 0.152941, 0.0470588, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fg4df"]
_data = {
"RESET": SubResource("Animation_7fwne"),
"shouji1": SubResource("Animation_qe803")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3jjsj"]
size = Vector2(10, 13)

[node name="slime" type="Node2D"]
script = ExtResource("1_ndyxx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_0n8c4")
autoplay = "default"
frame = 1
frame_progress = 0.12137

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -5)
target_position = Vector2(9, 0)
collision_mask = 65

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -5)
target_position = Vector2(-9, 0)
collision_mask = 65

[node name="shouji" type="Area2D" parent="."]
collision_layer = 4096
collision_mask = 4096
script = ExtResource("4_t7jut")

[node name="shuouji1" type="CollisionShape2D" parent="shouji"]
light_mask = 32768
visibility_layer = 32768
position = Vector2(0.25, -6.75)
shape = SubResource("RectangleShape2D_vyuem")

[node name="Timer" type="Timer" parent="shouji"]
wait_time = 0.3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fg4df")
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
script = ExtResource("4_vtpkp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visibility_layer = 2
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_3jjsj")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_jpi18")

[connection signal="area_entered" from="shouji" to="." method="_on_shouji_area_entered"]
[connection signal="timeout" from="shouji/Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
